[package]
name = "backend"
version = "0.21.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool-postgres = "0.14.0"
postgres-types = { version = "0.2.6", features = ["array-impls", "with-chrono-0_4", "with-uuid-0_8"] }
tokio-postgres = "0.7.10"
postgres-derive = "0.4.5"
actix-web = { version = "4.8.0", default-features = false, features = ["cookies", "compress-gzip", "macros"] }
tokio = { version = "1.38.1", features = ["net", "time", "macros", "rt-multi-thread"] }
sha2 = "0.10.8"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_repr = "0.1.19"
chrono = { version = "0.4.38", features = ["serde"] }
futures-util = "0.3.30"
futures = "0.3.30"
uuid = { version = "0.8.2", features = ["v4", "serde"] }